--- a/src/styles/profilePage.css
+++ b/src/styles/profilePage.css
@@ -1,9 +1,8 @@
-/* src/styles/profilePage.css */
-
 .profile-page-container {
   margin-top: 80px;
   padding: 20px;
 }
+
 
 /* Sidebar Navigation */
 .sidebar-navigation {
@@ -31,7 +30,6 @@
   color: #5a5a5a;
 }
 
-/* Right Content */
 .section-header {
   font-weight: bold;
   margin-bottom: 20px;
@@ -53,13 +51,34 @@
   margin-top: 30px;
 }
 
+.cancel-button {
+  font-weight: bold;
+  color: red;
+  text-transform: none;
+}
+
+.cancel-button:hover {
+  color: #c00;
+}
+
 .save-button {
-  background-color: #28a745;
+  background-color: #28a745 !important;
   color: #fff;
 }
 
 .save-button:hover {
-  background-color: #218838;
+  background-color: #218838 !important;
+}
+
+.change-password-button {
+  background-color: #007bff;
+  text-transform: none;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.change-password-button:hover {
+  background-color: #0069d9;
 }
 
 /* Avatar Preview Styles */
@@ -77,8 +96,54 @@
   border: 2px solid #ddd;
 }
 
+.custom-divider {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+/* Mobile Header */
+.mobile-header {
+  display: none;
+  align-items: center;
+  margin-bottom: -200px;
+}
+
+.mobile-menu-icon {
+  color: #333;
+}
+
+.mobile-menu-icon:hover {
+  color: #007bff;
+}
+
+.mobile-header-title {
+  flex-grow: 1;
+  font-weight: bold;
+  color: #000;
+  margin-left: 10px;
+}
+
+/* Drawer Content */
+.drawer-content {
+  width: 250px;
+  padding: 20px;
+  margin-top: 80px;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
+  .mobile-header {
+    display: flex;
+  }
+
+  .section-header {
+    text-align: center;
+  }
+
+  .sidebar-navigation {
+    display: none;
+  }
+
   .form-actions {
     flex-direction: column;
   }
