--- a/src/styles/profile/profilePage.css
+++ b/src/styles/profile/profilePage.css
@@ -1,3 +1,4 @@
+/* src/styles/profile/profilePage.css */
 .profile-page-container {
   margin-top: 80px;
   padding: 20px;
@@ -26,7 +27,7 @@
 }
 
 .nav-link:hover {
-  text-decoration: underline;
+  text-decoration:#007bff;
   color: #5a5a5a;
 }
 
