--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* src/App.css */
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import 'react-international-phone/style.css';
 .App {
   text-align: center;
 }
